# Python-Blockchain

./: .gitignore  Makefile  README.md  note.txt  pyproject.toml
backend/blockchain/: block.py  blockchain.py
backend/tests/block/: test_block.py
backend/tests/blockchain/: test_blockchain.py
