[tool.poetry]
name = "python-blockchain"
version = "0.1.0"
description = "This is python based blockchain project"
authors = ["Riad"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
